2002-04-14  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* IOCompletionCallback.cs: added attributes to the delegate
	(CLSCompliant(false) and Serializable).

2002-04-14 Patrik Torstensson <patrik.torstensson@labs2.com>
	* Thread.cs: Fixed IsThreadPoolThread to use a internal property instead of extending 
				 the threadstate enum.
	* ThreadPool.cs: Now using the internal Isthreadpoolthread property
	* ThreadState.cs: removed non-standard enum (ThreadPoolThread)

2002-04-14 Patrik Torstensson <patrik.torstensson@labs2.com>

	* ThreadState.cs: Added enum for threadpool thread
	* Thread.cs: changed the set/clr_state to be internal (used from threadpool)
	* Thread.cs: Added IsThreadPoolThread
	* ThreadPool.cs: Implementation of QueueUserWorkItem

Wed Feb 13 21:51:30 CET 2002 Paolo Molaro <lupus@ximian.com>

	* Thread.cs: implement CurrentCulture property needed by
	Convert.ChangeType() (used when compiling enums).

2002-01-23  Dick Porter  <dick@ximian.com>

	* ManualResetEvent.cs: 
	* AutoResetEvent.cs: Fixed DOS line endings

2002-01-22  Veronica De Santis <veron78@interfree.it>   
        
	* NativeEventCalls : Class that contains internal calls shared by Auto 
	  		     and Manual Reset Events
	* AutoResetEvents.cs : Added class AutoResetEvents and its implementation
	* ManualResetEvents.cs : Added class ManualResetEvents and its implementation

2002-01-16  Veronica De Santis <veron78@interfree.it>   
        
	* WaitHandle.cs : Renamed handle to os_handle and make it protected
	                  instead of private.
	* Mutex.cs : Write the System.Threading.Mutex methods ( constructors 
	             and the ReleaseMutex)

2002-01-15  Dick Porter  <dick@ximian.com>

	* WaitHandle.cs:
	* Thread.cs: Make the runtime's idea of infinite timeouts coincide
	with the class library's

2002-01-10  Dick Porter  <dick@ximian.com>

	* WaitHandle.cs: Added checks for too many handles and null
	handles in WaitAll() and WaitAny
	

2002-01-05  Ravi Pratap  <ravi@ximian.com>
